add random_string func

--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,9 @@
 .form {
     margin: 0 auto;
 }
+.video-container{
+    width: 350px;
+    height: 300px;
+    border: 2px solid red;
+    margin: 0 auto;
+}
