--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,11 @@
     text-align: center;
 }
 
-.map {
-    width: 600px;
-    height: 600px;
+.my_map {
+    width: 400px;
+    height: 400px;
+    /*max-width: 600px;*/
+    /*max-height: 600px;*/
     margin: 0 auto;
     border: 2px blue solid;
 }
@@ -13,15 +15,17 @@
 .foto {
     margin: 0 auto;
     display: block;
-    width: 400px;
-    height: 300px;
+    max-width: 400px;
+    max-height: 300px;
 }
 .form {
+    max-width: 350px;
+    max-height: 300px;
     margin: 0 auto;
 }
 .video-container{
-    width: 350px;
-    height: 300px;
+    max-width: 350px;
+    max-height: 300px;
     border: 2px solid red;
     margin: 0 auto;
 }
