--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,18 @@
 
 
 }
+
+.navbar-center
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 20px;
+    text-align: center;
+    overflow: visible;
+    font-size: 2rem !important;
+}
+
 @media screen and (min-width: 320px) and (max-width: 480px){
     .my_map {
         max-width: 320px;
